Snackbar z index increased to fix bug with map visibility markers

--- a/streetart/static/streetart/css/style.css
+++ b/streetart/static/streetart/css/style.css
@@ -1329,7 +1329,7 @@ a {
     border-radius: 2px;
     padding: 16px;
     position: fixed;
-    z-index: 1;
+    z-index: 100;
     left: 50%;
     bottom: 30px;
     font-size: 17px;
